[tool.poetry]
name = "nba"
version = "0.1.0"
description = ""
authors = ["Dustin Cannon <dustin@shunyata.space>"]

[tool.poetry.dependencies]
python = "^3.9"
pynetbox = "^6.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
